# bachelorthesis-ethz

./: .gitignore  README.md
cxenv/benchmarks/: cpp_bench_build_startup.csv  gcc-8_bench_build_local.csv  gcc-8_bench_build_startup.csv  gcc-8_bench_pull_startup.csv  gcc-8_bench_startup.csv  gcc-8_image_stats.csv  python-3_8_bench_build_local.csv  python-3_8_bench_build_startup.csv  python-3_8_bench_pull_startup.csv  python-3_8_bench_startup.csv  python-3_8_image_stats.csv
cxenv/scripts/: benchmark.sh  run-benchmarks.sh
experimental/: Dockerfile
experimental/nix/: default.nix  docker.nix  myapp.py  nix-shell_env.txt  nix-shell_env_2.txt  path-cache.txt  result  rust_nodejs.nix  setup.py
experimental/nix/python_poetry_ex/: default.nix  docker.nix  poetry.nix  pyproject.toml  result  shell.nix
experimental/nix/python_poetry_ex/imgapp/: __init__.py
presentations/: BachelorPresentation_March2022_V1.pptx  FinalPresentation.pptx  FinalPresentationV2.pptx  final-presentation-outline.txt  firstPresentationIdeas.txt
prototypes/: plotting.py
prototypes/build-image-at-runtime/: .gitignore  README.md  config.json  default.nix  update.sh
prototypes/cxenv_benchmarks/: gcc-8_bench_build_startup.csv  gcc-8_bench_startup.csv  gcc-8_image_stats.csv  python-3_8_bench_build_local.csv  python-3_8_bench_pull_startup.csv  python-3_8_bench_startup.csv
prototypes/nix-docker-builder/: .bash_history  .gitignore  README.md  builder-tarball  config.json  default.nix  (+3 more)
research/: first_presentation_content_ideas.txt  layout.sty  notes.txt
thesis/: refs.bib  thesis.tex  thesis.thm
(+218 files in other folders)
