[tool.poetry]
name = "imgapp"
version = "0.1.0"
description = ""
authors = ["Romeo Stoll <47355990+rstol@users.noreply.github.com>"]

[tool.poetry.dependencies]
requests = "^2.27.1"
flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
imgapp = 'imgapp:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"


